tests/errors/dotted.module.pxd
cdef inline i32 bar():
    return 5
